--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="sec1">
         <div class="header">
-            <h1 href="#https://mohamed9osos.github.io/my-profile/">mohamed</h1>
+            <h1 class="me">mohamed</h1>
             <ul>
                 <li ><a href="#about">about</a></li>
                 <li><a href="#projects">projects</a></li>
@@ -133,4 +133,5 @@
 
 
 </html>
+
 
